Update backend Dockerfile for subproject 3 stdio MCP mode

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -52,10 +52,10 @@ ARG GIT_COMMIT
 # Label the production image
 LABEL build_date=${BUILD_DATE}
 LABEL git_commit=${GIT_COMMIT}
-LABEL description="Olympian AI Lightweight Backend with MCP Servers"
+LABEL description="Olympian AI Lightweight Backend - Subproject 3 with Stdio MCP Servers"
 
-# Install curl for debugging (keeping for manual health checks if needed)
-RUN apk add --no-cache curl
+# Install curl and python for MCP servers (some may need python)
+RUN apk add --no-cache curl python3 py3-pip make g++
 
 # Copy package files - including shared package.json for proper workspace setup
 COPY package*.json ./
@@ -67,14 +67,29 @@ RUN npm install --production --workspace=packages/shared --workspace=packages/se
 
 # Install MCP server packages globally for stdio subprocess execution
 # These will be available via npx from the backend application
-RUN echo "=== Installing MCP Server Packages ===" && \
+RUN echo "=== Installing MCP Server Packages for Stdio Transport ===" && \
+    # GitHub MCP Server
     npm install -g @modelcontextprotocol/server-github@latest && \
-    npm install -g @programcomputer/nasa-mcp-server@latest && \
-    npm install -g metmuseum-mcp@latest && \
-    npm install -g @upstash/context7-mcp@latest && \
-    npm install -g @peakmojo/applescript-mcp@latest && \
-    npm install -g @modelcontextprotocol/server-brave-search@latest && \
-    echo "✓ MCP server packages installed successfully"
+    # NASA MCP Server 
+    npm install -g @modelcontextprotocol/server-nasa@latest && \
+    # Met Museum MCP Server
+    npm install -g @modelcontextprotocol/server-metmuseum@latest && \
+    # Context7 MCP Server
+    npm install -g @modelcontextprotocol/server-context7@latest && \
+    # AppleScript MCP Server
+    npm install -g @modelcontextprotocol/server-applescript@latest && \
+    # Web Search MCP Server
+    npm install -g @modelcontextprotocol/server-websearch@latest && \
+    echo "✓ MCP server packages installed successfully for stdio transport"
+
+# Verify MCP packages are available via npx
+RUN echo "=== Verifying MCP Package Availability ===" && \
+    npx --yes @modelcontextprotocol/server-github --help > /dev/null 2>&1 && echo "✓ GitHub MCP server available" || echo "⚠️ GitHub MCP server not available" && \
+    npx --yes @modelcontextprotocol/server-nasa --help > /dev/null 2>&1 && echo "✓ NASA MCP server available" || echo "⚠️ NASA MCP server not available" && \
+    npx --yes @modelcontextprotocol/server-metmuseum --help > /dev/null 2>&1 && echo "✓ Met Museum MCP server available" || echo "⚠️ Met Museum MCP server not available" && \
+    npx --yes @modelcontextprotocol/server-context7 --help > /dev/null 2>&1 && echo "✓ Context7 MCP server available" || echo "⚠️ Context7 MCP server not available" && \
+    npx --yes @modelcontextprotocol/server-applescript --help > /dev/null 2>&1 && echo "✓ AppleScript MCP server available" || echo "⚠️ AppleScript MCP server not available" && \
+    npx --yes @modelcontextprotocol/server-websearch --help > /dev/null 2>&1 && echo "✓ Web Search MCP server available" || echo "⚠️ Web Search MCP server not available"
 
 # Copy built files from build stage
 COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
@@ -87,7 +102,7 @@ COPY --from=builder /tmp/build_info /app/build_info.txt
 RUN mkdir -p /config/.olympian-ai-lite
 
 # Verify deployment with enhanced checks including MCP packages
-RUN echo "=== Final Backend Verification ===" && \
+RUN echo "=== Final Backend Verification for Subproject 3 ===" && \
     echo "Build Date: ${BUILD_DATE}" && \
     echo "Git Commit: ${GIT_COMMIT}" && \
     echo "" && \
@@ -98,36 +113,39 @@ RUN echo "=== Final Backend Verification ===" && \
     ls -la node_modules/@olympian/ || echo "No @olympian scope found" && \
     echo "" && \
     echo "Global MCP packages:" && \
-    npm list -g --depth=0 | grep -E "(server-github|nasa-mcp|metmuseum|context7|applescript|brave-search)" || echo "MCP packages verification" && \
+    npm list -g --depth=0 | grep -E "(server-github|server-nasa|server-metmuseum|server-context7|server-applescript|server-websearch)" || echo "MCP packages verification" && \
+    echo "" && \
+    echo "NPX binary location:" && \
+    which npx && \
     echo "" && \
     echo "Build info:" && \
     cat /app/build_info.txt && \
     echo "" && \
     if [ -f packages/server/dist/index.js ]; then \
-        echo "✓ Backend build confirmed"; \
+        echo "✓ Backend build confirmed for stdio MCP mode"; \
     else \
         echo "ERROR: Backend build missing!" && exit 1; \
     fi
 
-# Environment configuration for different deployment scenarios
-# These can be overridden at runtime
+# Environment configuration for subproject 3 (stdio MCP mode)
 ENV NODE_ENV=production \
     PORT=4000 \
-    # Deployment mode: 'same-host' or 'multi-host'
-    DEPLOYMENT_MODE=multi-host \
-    # Same-host defaults (using Docker network names)
-    MONGODB_URI_SAME_HOST=mongodb://olympian-mongodb:27017/olympian_ai_lite \
-    OLLAMA_HOST_SAME_HOST=http://olympian-ollama:11434 \
-    # Multi-host defaults (using IP addresses)
-    MONGODB_URI=mongodb://mongo-host:27017/olympian_ai_lite \
-    OLLAMA_HOST=http://ollama-host:11434 \
+    # Subproject identification for stdio MCP mode
+    SUBPROJECT=3 \
+    # Deployment mode: docker-multi-host for subproject 3
+    DEPLOYMENT_MODE=docker-multi-host \
+    # MCP Configuration - stdio transport with child processes
+    MCP_ENABLED=true \
+    MCP_TRANSPORT=stdio \
+    MCP_CONFIG_PATH=/app/mcp-config.stdio.json \
     # Service discovery
     SERVICE_DISCOVERY_ENABLED=true \
     SERVICE_DISCOVERY_NETWORK=bridge \
-    # MCP Configuration - stdio transport with subprocesses
-    MCP_ENABLED=true \
-    MCP_TRANSPORT=stdio \
-    MCP_CONFIG_PATH=/app/mcp-config.multihost.json
+    # Multi-host defaults
+    MONGODB_URI=mongodb://mongodb:27017/olympian_ai_lite?replicaSet=rs0 \
+    OLLAMA_HOST=http://ollama-host:11434 \
+    # Memory settings for stdio MCP servers
+    NODE_OPTIONS="--max-old-space-size=4096"
 
 EXPOSE 4000
 
