Fix anti-npm-corruption: Replace deprecated cache-max with prefer-online
- Replace deprecated `npm config set cache-max 0` with `npm config set prefer-online true`
- This fixes the build error: "cache-max option is deprecated, and can not be set in this way"
- According to npm docs: cache-max=0 is equivalent to prefer-online=true
- Maintains the same caching behavior with updated npm configuration syntax

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -80,7 +80,7 @@ RUN echo "=== NPM Cache Cleanup & Configuration for MCP Servers ===" && \
     npm config set fetch-retry-mintimeout 20000 && \
     npm config set fetch-retry-maxtimeout 120000 && \
     npm config set fetch-retries 5 && \
-    npm config set cache-max 0 && \
+    npm config set prefer-online true && \
     npm config set prefer-offline false && \
     npm config set audit false && \
     npm config set fund false && \
