Fix: Update nginx configuration for correct model endpoint routing
- Update regex pattern from /api/(models|chat)/(capabilities|vision-models) to /api/models/(list|capabilities|vision)
- Ensures proper routing to the dedicated models router endpoints
- Maintains extended timeouts for model capability detection (20 minutes)
- Fixes 502 Bad Gateway error by aligning nginx routing with backend routing structure
- Part of fixing model loading capability in subproject 3 multi-host deployment

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -90,8 +90,9 @@ http {
             proxy_set_header Connection "keep-alive";
         }
         
-        # MODEL CAPABILITY ENDPOINTS - Special handling for capability detection
-        location ~* /api/(models|chat)/(capabilities|vision-models) {
+        # MODEL CAPABILITY ENDPOINTS - FIXED: Updated routing for clear separation of concerns
+        # Now properly handles /api/models/* endpoints (separate from chat endpoints)
+        location ~* /api/models/(list|capabilities|vision) {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
