Fix MCP configuration and UI display
- Updated mcp-config.multihost.json with curated server list using env vars
- Enhanced MCPManager with new server configurations
- Fixed config API to load project mcp-config.multihost.json
- Enhanced ToolDescriptionEditor to display available MCP tools
- Added tool discovery and configuration UI components
- Used environment variables for sensitive tokens

--- a/.env.example
+++ b/.env.example
@@ -358,3 +358,6 @@ CHOKIDAR_USEPOLLING=false
 # Web Search MCP Server (Port 3006):
 # npx -y @modelcontextprotocol/server-brave-search --transport http --port 3006
 # Environment: BRAVE_API_KEY=your_key_here (optional)
+# MCP Server Environment Variables
+GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
+NASA_API_KEY=your_nasa_api_key_here
