--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,21 @@
 node_modules
-*/node_modules
-dist
-*/dist
-build
-*/build
-.env
-*.env.local
-*.log
-logs
-coverage
-.nyc_output
+npm-debug.log
 .git
 .gitignore
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+README.md
+docs/
+*.md
+.vscode
+.idea
+coverage/
+.nyc_output
+.cache
+dist/
+build/
 .DS_Store
-*.swp
-*.swo
+Thumbs.db
