--- a/mcp-config.stdio.json
+++ b/mcp-config.stdio.json
@@ -4,55 +4,26 @@
       "command": "npx",
       "args": ["-y", "@modelcontextprotocol/server-github"],
       "env": {
-        "GITHUB_PERSONAL_ACCESS_TOKEN": ""
+        "GITHUB_PERSONAL_ACCESS_TOKEN": "${GITHUB_PERSONAL_ACCESS_TOKEN}"
       },
       "timeout": 30000,
       "retries": 3
     },
-    "filesystem": {
+    "applescript": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-filesystem", "/app"],
+      "args": ["-y", "@modelcontextprotocol/server-applescript"],
       "timeout": 30000,
       "retries": 3
     },
-    "memory": {
+    "context7": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-memory"],
+      "args": ["-y", "@upstash/context7-mcp"],
       "env": {
-        "MEMORY_FILE_PATH": "/config/mcp-memory.json"
+        "UPSTASH_REDIS_REST_URL": "${UPSTASH_REDIS_REST_URL}",
+        "UPSTASH_REDIS_REST_TOKEN": "${UPSTASH_REDIS_REST_TOKEN}"
       },
       "timeout": 30000,
       "retries": 3
-    },
-    "brave-search": {
-      "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-brave-search"],
-      "env": {
-        "BRAVE_API_KEY": ""
-      },
-      "timeout": 45000,
-      "retries": 3
-    },
-    "slack": {
-      "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-slack"],
-      "env": {
-        "SLACK_BOT_TOKEN": "",
-        "SLACK_TEAM_ID": ""
-      },
-      "timeout": 30000,
-      "retries": 3,
-      "optional": true
-    },
-    "postgres": {
-      "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-postgres"],
-      "env": {
-        "DATABASE_URL": ""
-      },
-      "timeout": 30000,
-      "retries": 3,
-      "optional": true
     }
   },
   "cacheTtl": 300000
